<resources>
  <string name="app_name" translatable="false">Bunker</string>
  <string name="logo_animation" translatable="false">Bunker_animation</string>
  <string name="title_activity_login">| Iniciar Sesión</string>
  <string name="title_activity_signup">| Registrarse</string>

  <!-- Strings related to login -->
  <string name="prompt_email">Email</string>
  <string name="prompt_name">Nombre</string>
  <string name="prompt_password">Contraseña</string>
  <string name="action_sign_in">Iniciar Sesión</string>
  <string name="action_sign_up">Registrarse</string>
  <string name="error_invalid_email">Este correo es invalido</string>
  <string name="error_small_password">La contraseña es muy corta</string>
  <string name="error_incorrect_password">La contraseña es incorrecta</string>
  <string name="error_user_exists">Este email ya esta registrado</string>
  <string name="error_field_required">Este campo es requerido</string>
  <string name="loading">Cargando...</string>
  <string name="action_recover_pass">Recuperar contraseña</string>

  <!-- Strings related to the dashboard -->
  <string name="nav_home">Home</string>
  <string name="nav_people">Contactos</string>
  <string name="nav_settings">Ajustes</string>
  <string name="nav_logout">Cerrar Sesión</string>

  <!-- Strings related to Add new contact -->

  <string name="error_invalid_name">El nombre debe de llevar un apellido y un nombre</string>
  <string name="beneficiario_name">Nombre del beneficiario</string>
  <string name="num_poliza">Número de póliza</string>
  <string name="client_name">Nombre del cliente</string>
  <string name="phone">Teléfono</string>
  <string name="monto">Monto Asegurado</string>

  <string-array name="month">
    <item>Enero</item>
    <item>Febrero</item>
    <item>Marzo</item>
    <item>Abril</item>
    <item>Mayo</item>
    <item>Junio</item>
    <item>Julio</item>
    <item>Agosto</item>
    <item>Septiembre</item>
    <item>Octubre</item>
    <item>Noviembre</item>
    <item>Diciembre</item>
  </string-array>

  <string name="date">Fecha</string>
  <string name="aseguradora">Aseguradora:</string>
  <string name="duracion">Duración:</string>
  <string-array name="empresas">
    <item>El Aguila</item>
    <item>Axa</item>
    <item>Seguros Monterrey</item>
  </string-array>

  <string-array name="duration">
    <item>Unica</item>
    <item>Mensual</item>
    <item>Bimestral</item>
    <item>Trimestral</item>
    <item>Cuatrimestral</item>
    <item>Semestral</item>
    <item>Anual</item>
  </string-array>
  <string name="title_item_list">Items</string>
  <string name="title_item_detail">Item Detail</string>
  <string name="descartar">Descartar</string>
  <string name="save">Guardar</string>
  <string name="delete">Borrar</string>

</resources>
