<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".activity.AddNewActivity">
  <group
    android:id="@+id/action_settings"
    android:icon="@drawable/ic_more_vert_wrapped"
    android:orderInCategory="100"
    app:showAsAction="never">
    <item
      android:title="@string/descartar"
      android:id="@+id/menu_add_new_descartar"/>
    <item
      android:id="@+id/action_remove"
      android:title="@string/delete"
      android:visible="false"/>
  </group>
  <item
    android:id="@+id/action_Save"
    android:orderInCategory="200"
    android:title="@string/save"
    android:icon="@drawable/ic_check_wrapped"
    app:showAsAction="ifRoom"/>
  <item
    android:id="@+id/action_Edit"
    android:orderInCategory="300"
    android:title="@string/save"
    android:icon="@drawable/ic_create_wrapped"
    android:visible="false"
    app:showAsAction="ifRoom"/>
</menu>