<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/drawer"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true"
  tools:context=".activity.SignupActivity">
  <android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">    
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
      <!--<include layout="@layout/app_bar_layout"/>-->
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="1"
          android:minHeight="115dp"
          android:gravity="center">
          <android.support.v7.widget.AppCompatImageView
            android:transitionName="@string/logo_animation"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:contentDescription="@string/app_name"
            android:background="@mipmap/ic_launcher"/>
          <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/title_activity_signup"
            android:textStyle="bold"
            android:textSize="30sp"/>
        </LinearLayout>
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="2"
          android:gravity="center">

          <ProgressBar
            android:id="@+id/sign_up_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

          <ScrollView
            android:id="@+id/sign_up_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="16dp"
              android:orientation="vertical"
              android:gravity="center">
              <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center">
                <android.support.v7.widget.AppCompatEditText
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:inputType="textPersonName"
                  android:minWidth="350dp"
                  android:drawableStart="@drawable/ic_account_box"
                  android:drawablePadding="6dp"
                  android:id="@+id/sign_up_form_name"
                  android:hint="@string/prompt_name"
                  android:maxLines="1"/>
              </android.support.design.widget.TextInputLayout>
              <android.support.design.widget.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="4dp"
              android:gravity="center">
              <android.support.v7.widget.AppCompatEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:minWidth="350dp"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="6dp"
                android:id="@+id/sign_up_form_email"
                android:hint="@string/prompt_email"
                android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>
              <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center">
                <android.support.v7.widget.AppCompatEditText
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:minWidth="350dp"
                  android:drawableStart="@drawable/ic_lock"
                  android:drawablePadding="6dp"
                  android:id="@+id/sign_up_form_password"
                  android:hint="@string/prompt_password"
                  android:maxLines="1"/>
              </android.support.design.widget.TextInputLayout>
              <android.support.v7.widget.AppCompatButton
                android:id="@+id/sign_up_form_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_up"
                android:textStyle="bold"/>
            </LinearLayout>
          </ScrollView>
        </LinearLayout>
      </LinearLayout>
    </LinearLayout>
  </android.support.design.widget.CoordinatorLayout>
</android.support.v4.widget.DrawerLayout>